Documentation and battening down the hatches.